--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,31 +4,38 @@
   font-family: Helvetica, Arial, sans-serif;
 }
 
-
-html, body{
-    height: 100vh;
-    width: 100vw;
+html,
+body {
+  height: 100vh;
+  width: 100vw;
 }
-main{
-    width: 100%;
-}
-
-.mt-1{
-    margin-top: 5px;
+main {
+  width: 100%;
 }
 
-.mt-5{
-    margin-top: 20px;
+.mt-1 {
+  margin-top: 5px;
 }
 
-.mb-1{
-    margin-bottom: 5px;
+.mt-5 {
+  margin-top: 20px;
 }
 
-.mb-5{
-    margin-bottom: 20px;
+.mb-1 {
+  margin-bottom: 5px;
 }
 
-.pointer{
-    cursor: pointer;
+.mb-5 {
+  margin-bottom: 20px;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.loadingScreen {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
