--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -39,7 +39,7 @@
 .journal__entries{
     margin-top: 30px;
     flex: 1 1 auto;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 0 10px;
 }
 
